package com.guiodes.repertory.domain.models

import com.guiodes.repertory.domain.interfaces.BaseEntity

data class Instrument(
    val name: String,
) : BaseEntity()
