CREATE TABLE "USER_AUTHORITY"
(
    USER_ID    UUID             NOT NULL REFERENCES TB_USER (ID),
    AUTHORITY_ID UUID           NOT NULL REFERENCES "AUTHORITY" (ID),
    CREATED_AT TIMESTAMP        NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP        NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (USER_ID, AUTHORITY_ID)
);

COMMENT ON TABLE "USER_AUTHORITY" IS 'User authority table';
COMMENT ON COLUMN "USER_AUTHORITY".USER_ID IS 'User authority user id';
COMMENT ON COLUMN "USER_AUTHORITY".AUTHORITY_ID IS 'User authority authority id';