CREATE TABLE "USER_INSTRUMENT"
(
    USER_ID       UUID             NOT NULL,
    INSTRUMENT_ID UUID           NOT NULL,
    CREATED_AT    TIMESTAMP        NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT    TIMESTAMP        NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (USER_ID, INSTRUMENT_ID),
    FOREIGN KEY (USER_ID) REFERENCES "USER" (ID),
    FOREIGN KEY (INSTRUMENT_ID) REFERENCES "INSTRUMENT" (ID)
);

COMMENT ON TABLE "USER_INSTRUMENT" IS 'User instrument table';
COMMENT ON COLUMN "USER_INSTRUMENT".USER_ID IS 'User id';
COMMENT ON COLUMN "USER_INSTRUMENT".INSTRUMENT_ID IS 'Instrument id';